Fix background to stretch full length of page

--- a/src/style.css
+++ b/src/style.css
@@ -17,9 +17,13 @@
 html {
   background-image: url('./img/background_image.jpg');
   background-size: cover;
-  background-repeat: none;
-  /* background-position: center; */
-  height: 100vh;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+}
+
+body {
+  margin: 0;
+  min-height: 100vh;
 }
 
 .navbar {
@@ -70,22 +74,21 @@ html {
 /* home page */
 
 .home-page {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 80vh; /* Adjust the height to leave space for the navbar */
-  width: 100%;
+  height: 80vh;
+  max-width: 80vw;
 }
 
 .home-hero {
   display: flex;
-  justify-content: space-between;
-  gap: 5rem;
+  justify-content: center;
+  width: 85vh;
+  max-width: 1200px;
+  margin: 0, auto;
+  gap: 0 5rem;
 }
 
 .home-hero-text {
@@ -121,6 +124,7 @@ html {
 }
 
 /* quiz page */
+
 .quiz-category {
   text-transform: uppercase;
   text-decoration: none;
@@ -199,13 +203,14 @@ html {
 }
 
 /* footer */
+.footer {
+  margin: 20px 0;
+}
 .footer a {
-  position: absolute;
-  bottom: 0;
+  z-index: 1;
+  position: relative;
   left: 80vw;
-  padding: 20px 0;
   text-decoration: none;
-  display: flex;
 }
 
 .footer a:hover {
